Changed titlle from 2018 to 2019 and added target=blank on the anchor tags.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Emblazon 2018||The Cultural Fest of HMRITM</title>
+    <title>Emblazon 2019||The Cultural Fest of HMRITM</title>
     <meta name="description" content="HMRITM's 2019 Techfest's official site." />
     <meta name="keywords" content="fun,Cultural Fest, HMR, HMRITM, Vishesh Mohey,Delhi,Events ,Doomedtodie,New delhi,Fun,robotics,Star Night,Bands,Fashion,Emblazon,emblazon" />
     <meta name="author" content="Vishesh Mohey(Doomedtodie)" />
@@ -50,16 +50,16 @@
     <div class="menu__item menu__item--2" data-direction="lr">
         <div class="menu__item-inner">
             <div class="menu__item-map"></div>
-            <a href="https://goo.gl/maps/dQ8LBvDARF52" class="menu__item-hoverlink">The Location</a>
+            <a href="https://goo.gl/maps/dQ8LBvDARF52" target="_blank" class="menu__item-hoverlink">The Location</a>
         </div>
     </div>
     <div class="menu__item menu__item--3" data-direction="bt">
         <div class="menu__item-inner">
             <div class="sidemenu">
-                <a href="http://www.hmritm.ac.in/" class="sidemenu__item"><span class="sidemenu__item-inner">HMRITM</span></a>
-                <a href="https://www.instagram.com/emblazon_2k18/" class="sidemenu__item"><span class="sidemenu__item-inner">Instagram</span></a>
-                <a href="https://www.facebook.com/hmritm.emblazon/" class="sidemenu__item"><span class="sidemenu__item-inner">Facebook</span></a>
-                <a href="#" class="sidemenu__item"><span class="sidemenu__item-inner">Youtube</span></a>
+                <a href="http://www.hmritm.ac.in/" target="_blank" class="sidemenu__item"><span class="sidemenu__item-inner">HMRITM</span></a>
+                <a href="https://www.instagram.com/emblazon_2k18/" target="_blank" class="sidemenu__item"><span class="sidemenu__item-inner">Instagram</span></a>
+                <a href="https://www.facebook.com/hmritm.emblazon/" target="_blank" class="sidemenu__item"><span class="sidemenu__item-inner">Facebook</span></a>
+                <a href="#" target="_blank" class="sidemenu__item"><span class="sidemenu__item-inner">Youtube</span></a>
 
             </div>
         </div>
