--- a/team.html
+++ b/team.html
@@ -13,6 +13,9 @@
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
 	<link rel="stylesheet" type="text/css" href="css/base.css" />
 	<link rel="stylesheet" type="text/css" href="css/team.css" />
+	<link rel="stylesheet" type="text/css" href="css/heading.css" />
+	<link rel="stylesheet" type="text/css" href="css/magneto.css" />
+	<link href="https://fonts.googleapis.com/css?family=Nunito:400,700|Montserrat:700" rel="stylesheet">
 	<script src="js/snap.svg-min.js"></script>
 	<script src="js/modernizr.custom.js"></script>
 	<script>document.documentElement.className="js";var supportsCssVars=function(){var e,t=document.createElement("style");return t.innerHTML="root: { --tmp-var: bold; }",document.head.appendChild(t),e=!!(window.CSS&&window.CSS.supports&&window.CSS.supports("font-weight","var(--tmp-var)")),t.parentNode.removeChild(t),e};supportsCssVars()||alert("Please view this Site in a modern browser for best experience.");</script>
@@ -34,6 +37,7 @@
 		<div class="menu__item-inner">
 			<div class="mainmenu">
 				<a href="index.html" class="mainmenu__item">Emblazon 2019</a>
+				<a href="about.html" class="mainmenu__item">About Us</a>
 				<a href="events.html" class="mainmenu__item">Events</a>
 				<a href="team.html" class="mainmenu__item">Our Team</a>
 				<a href="sponsors.html" class="mainmenu__item">Sponsors</a>
@@ -64,7 +68,8 @@
 		<div class="menu__item-inner">
 
 			<p class="label label--topleft label--line">Be a Part now</p>
-			<a href="javascript:void(0)" class="menu__item-link">Register Now</a>
+			<a href="schedule.html" class="menu__item-link">Schedule</a>
+			<a href="gallery.html" class="menu__item-link">Gallery</a>
 		</div>
 
 
@@ -80,6 +85,11 @@
 	<button class="action action--menu"><svg class="icon icon--menu"><use xlink:href="#icon-menu"></use></svg></button>
 	<button class="action action--close"><svg class="icon icon--close"><use xlink:href="#icon-close"></use></svg></button>
 </nav>
+</body>
+<body>
+<section class="content content--layout">
+	<h2 class="word word--magneto">Team</h2>
+</section>
         <div class="container">
 			<div class="wrapper">
 				<ul class="stage clearfix">
@@ -143,4 +153,8 @@
     window.scrollTo(0, 0);
 }</script>
 <script src="js/demo.js"></script>
+<script src="js/charming.min.js"></script>
+<script src="js/anime.min.js"></script>
+<script src="js/heading.js"></script>
+<script src="js/demo1.js"></script>
 </html>
