--- a/events.html
+++ b/events.html
@@ -13,9 +13,12 @@
 
     <link rel="stylesheet" type="text/css" href="css/normalize.css" />
     <link href="https://fonts.googleapis.com/css?family=Bungee+Shade" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:400,700|Londrina+Outline|Londrina+Solid" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
     <link rel="stylesheet" type="text/css" href="css/base.css" />
     <link rel="stylesheet" type="text/css" href="css/event.css" />
+    <link rel="stylesheet" type="text/css" href="css/heading.css" />
+    <link rel="stylesheet" type="text/css" href="css/swing.css" />
     <script src="js/snap.svg-min.js"></script>
 
     <script>document.documentElement.className="js";var supportsCssVars=function(){var e,t=document.createElement("style");return t.innerHTML="root: { --tmp-var: bold; }",document.head.appendChild(t),e=!!(window.CSS&&window.CSS.supports&&window.CSS.supports("font-weight","var(--tmp-var)")),t.parentNode.removeChild(t),e};supportsCssVars()||alert("Please view this Site in a modern browser for best experience.");</script>
@@ -43,6 +46,7 @@
         <div class="menu__item-inner">
             <div class="mainmenu">
                 <a href="index.html" class="mainmenu__item">Emblazon 2019</a>
+                <a href="about.html" class="mainmenu__item">About Us</a>
                 <a href="events.html" class="mainmenu__item">Events</a>
                 <a href="team.html" class="mainmenu__item">Our Team</a>
                 <a href="sponsors.html" class="mainmenu__item">Sponsors</a>
@@ -73,7 +77,8 @@
         <div class="menu__item-inner">
 
             <p class="label label--topleft label--line">Be a Part now</p>
-            <a href="javascript:void(0)" class="menu__item-link">Register Now</a>
+            <a href="schedule.html" class="menu__item-link">Schedule</a>
+            <a href="gallery.html" class="menu__item-link">Gallery</a>
         </div>
 
 
@@ -92,6 +97,9 @@
 </body>
 
 <main>
+    <section class="content content--layout">
+        <h2 class="word word--swing">Events</h2>
+    </section>
     <div class="content">
         <div class="grid">
             <a class="grid__item" href="#preview-1">
@@ -303,6 +311,10 @@
     window.scrollTo(0, 0);
 }</script>
 <script src="js/event.js"></script>
-<script src="js/demo.js"></script>
+<script src="js/demo.js"></script>`
+<script src="js/charming.min.js"></script>
+<script src="js/anime.min.js"></script>
+<script src="js/heading.js"></script>
+<script src="js/demo4.js"></script>
 </body>
 </html>
