--- a/sponsors.html
+++ b/sponsors.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Sponsors</title>
+    <title>Emblazon 2019||The Cultural Fest of HMRITM</title>
     <link rel="stylesheet" href="sponsors.css">
      <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css" >
      <!-- Animate -->
