--- a/sponsors.html
+++ b/sponsors.html
@@ -3,23 +3,99 @@
 <head>
     <meta charset="UTF-8">
     <title>Emblazon 2019||The Cultural Fest of HMRITM</title>
-    <link rel="stylesheet" href="sponsors.css">
+    <link rel="shortcut icon" href="images/mask_logo.png">
+    
      <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css" >
      <!-- Animate -->
     <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
+     <link rel="stylesheet" type="text/css" href="css/normalize.css" />
+    <link href="https://fonts.googleapis.com/css?family=Bungee+Shade" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
+    <link rel="stylesheet" type="text/css" href="css/base.css" />
+    <link href="css/index.css" rel="stylesheet">
+    <script src="js/snap.svg-min.js"></script>
+    <link rel="stylesheet" href="sponsors.css">
+     <script>document.documentElement.className="js";var supportsCssVars=function(){var e,t=document.createElement("style");return t.innerHTML="root: { --tmp-var: bold; }",document.head.appendChild(t),e=!!(window.CSS&&window.CSS.supports&&window.CSS.supports("font-weight","var(--tmp-var)")),t.parentNode.removeChild(t),e};supportsCssVars()||alert("Please view this Site in a modern browser for best experience.");</script>
+
+
 </head>
 <body>
+  <svg class="hidden">
+    <symbol id="icon-menu" viewBox="0 0 119 25">
+        <title>menu</title>
+        <path d="M36,8 L36,0 L100,0 L100,8 L36,8 Z M0,8 L0,0 L24,0 L24,8 L0,8 Z M0,28 L0,20 L71,20 L71,28 L0,28 Z"/>
+    </symbol>
+    <symbol id="icon-close" viewBox="0 0 24 24">
+        <title>close</title>
+        <path d="M24 1.485L22.515 0 12 10.515 1.485 0 0 1.485 10.515 12 0 22.515 1.485 24 12 13.484 22.515 24 24 22.515 13.484 12z"/>
+    </symbol>
+</svg>
+
+<div class="background"></div>
+<nav class="menu">
+    <div class="menu__item menu__item--1" data-direction="bt">
+        <div class="menu__item-inner">
+            <div class="mainmenu">
+                <a href="index.html" class="mainmenu__item">Emblazon 2019</a>
+                <a href="about.html" class="mainmenu__item">About Us</a>
+                <a href="events.html" class="mainmenu__item">Events</a>
+                <a href="team.html" class="mainmenu__item">Our Team</a>
+                <a href="sponsors.html" class="mainmenu__item">Sponsors</a>
+                <a href="register.html"class="mainmenu__item">Register</a>
+            </div>
+            <p class="label label--topleft label--vert-mirror">HMRITM</p>
+            <p class="label label--bottomright label--vert">The Important Stuff</p>
+        </div>
+    </div>
+    <div class="menu__item menu__item--2" data-direction="lr">
+        <div class="menu__item-inner">
+            <div class="menu__item-map"></div>
+            <a href="https://goo.gl/maps/dQ8LBvDARF52" target="_blank" class="menu__item-hoverlink">The Location</a>
+        </div>
+    </div>
+    <div class="menu__item menu__item--3" data-direction="bt">
+        <div class="menu__item-inner">
+            <div class="sidemenu">
+                <a href="http://www.hmritm.ac.in/" target="_blank" class="sidemenu__item"><span class="sidemenu__item-inner">HMRITM</span></a>
+                <a href="https://www.instagram.com/emblazon_2k18/" target="_blank" class="sidemenu__item"><span class="sidemenu__item-inner">Instagram</span></a>
+                <a href="https://www.facebook.com/hmritm.emblazon/" target="_blank" class="sidemenu__item"><span class="sidemenu__item-inner">Facebook</span></a>
+                <a href="#" target="_blank" class="sidemenu__item"><span class="sidemenu__item-inner">Youtube</span></a>
+
+            </div>
+        </div>
+    </div>
+    <div class="menu__item menu__item--4" data-direction="rl">
+        <div class="menu__item-inner">
+
+            <p class="label label--topleft label--line">Be a Part now</p>
+            <a href="schedule.html" class="menu__item-link">Schedule</a>
+            <a href="gallery.html" class="menu__item-link">Gallery</a>
+        </div>
+
+
+
+    </div>
+    <div class="menu__item menu__item--5" data-direction="tb">
+        <div class="menu__item-inner">
+            <p class="quote">"Children, this is the only gift I can give you right now. A formless gift you call a memory."</p>
+        </div>
+    </div>
+
+
+    <button class="action action--menu"><svg class="icon icon--menu"><use xlink:href="#icon-menu"></use></svg></button>
+    <button class="action action--close"><svg class="icon icon--close"><use xlink:href="#icon-close"></use></svg></button>
+</nav>
     <section id="sponsors" class="section-padding">
       <div class="container">
         <div class="row">
           <div class="col-12">
             <div class="section-title-header text-center">
               <h1 class="section-title h1 wow fadeInUp" data-wow-delay="0.2s">Sponsors</h1>
-              <p class="wow h3 fadeInDown" data-wow-delay="0.2s">EMBLAZON 2019</p>
+              <p class="wow h3 fadeInDown" data-wow-delay="0.2s my-1">EMBLAZON 2019</p>
             </div>
           </div>
         </div>
-        <div class="row mb-30 text-center wow fadeInDown" data-wow-delay="0.3s">
+        <div class="row mb-30 text-center wow fadeInDown my-3 mx-auto p-auto" data-wow-delay="0.3s">
           <div class="col-md-3 col-sm-3 col-xs-12">
             <div class="spnsors-logo">
               <a href="#"><img class="img-fluid" src="./images/logo1.png" alt=""></a>
@@ -49,4 +125,12 @@
      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.bundle.min.js"></script>
 </body>
+<script src="js/imagesloaded.pkgd.min.js"></script>
+<script src="js/TweenMax.min.js"></script>
+
+<script>window.onbeforeunload = function () {
+    window.scrollTo(0, 0);
+}</script>
+<script src="js/demo.js"></script>
+</html>
 </html>
