--- a/register.html
+++ b/register.html
@@ -107,8 +107,8 @@
 					<br>
 					<div class="radio-inline" class="wrap-input100 validate-input" >
 						<span class="label-input100">Payment</span><br>
-						<center><input type="radio" name="cash" required id="pay">By Cash<br>
-						<input type="radio" name="cash" required id="pay">Via Paytm</center>	
+						<center><input type="radio" value="cash" required id="pay">By Cash<br>
+						<input type="radio" value="paytm" required id="pay">Via Paytm</center>	
 						<span class="focus-input100" ></span>
 					</div>
 					<br>
