--- a/events.html
+++ b/events.html
@@ -123,7 +123,7 @@
             <a class="grid__item" href="#preview-3">
                 <div class="box">
                     <div class="box__shadow"></div>
-                    <img class="box__img" src="images/1.jpg" alt="Some image"/>
+                    <img class="box__img" src="images/3.jpg" alt="Some image"/>
                     <h3 class="box__title"><span class="box__title-inner" data-hover="Style">Style</span></h3>
                     <h4 class="box__text box__text--topcloser"><span class="box__text-inner">Fashion Parade</span></h4>
                 </div>
@@ -132,7 +132,7 @@
             <a class="grid__item" href="#preview-4">
                 <div class="box">
                     <div class="box__shadow"></div>
-                    <img class="box__img" src="images/1.jpg" alt="Some image"/>
+                    <img class="box__img" src="images/4.jpg" alt="Some image"/>
                     <h3 class="box__title"><span class="box__title-inner" data-hover="Duet">Duet</span></h3>
                     <h4 class="box__text box__text--bottom box__text--right"><span class="box__text-inner box__text-inner--rotated3">Duet Singing</span></h4>
                 </div>
@@ -140,7 +140,7 @@
             <a class="grid__item" href="#preview-5">
                 <div class="box">
                     <div class="box__shadow"></div>
-                    <img class="box__img" src="images/1.jpg" alt="Some image"/>
+                    <img class="box__img" src="images/5.jpg" alt="Some image"/>
                     <h3 class="box__title"><span class="box__title-inner" data-hover="Treasure">Treasure</span></h3>
                     <h4 class="box__text box__text--bottomcloser"><span class="box__text-inner">Treasure Hunt</span></h4>
                 </div>
@@ -148,7 +148,7 @@
             <a class="grid__item" href="#preview-6">
                 <div class="box">
                     <div class="box__shadow"></div>
-                    <img class="box__img" src="images/1.jpg" alt="Some image"/>
+                    <img class="box__img" src="images/6.jpg" alt="Some image"/>
                     <h3 class="box__title"><span class="box__title-inner" data-hover="Duet">Duet</span></h3>
                     <h4 class="box__text"><span class="box__text-inner">DUET DANCE</span></h4>
                     <p class="box__content">"Love stronger, stranger! Love stronger."</p>
@@ -157,7 +157,7 @@
             <a class="grid__item" href="#preview-7">
                 <div class="box">
                     <div class="box__shadow"></div>
-                    <img class="box__img" src="images/1.jpg" alt="Some image"/>
+                    <img class="box__img" src="images/7.jpg" alt="Some image"/>
                     <h3 class="box__title box__title--straight box__title--bottom"><span class="box__title-inner" data-hover="Debate">Debate</span></h3>
                     <h4 class="box__text box__title--bottom"><span class="box__text-inner box__text-inner--rotated1">Debate</span></h4>
                 </div>
@@ -165,7 +165,7 @@
             <a class="grid__item" href="#preview-8">
                 <div class="box">
                     <div class="box__shadow"></div>
-                    <img class="box__img" src="images/1.jpg" alt="Some image"/>
+                    <img class="box__img" src="images/8.jpg" alt="Some image"/>
                     <h3 class="box__title"><span class="box__title-inner" data-hover="Solo">Solo</span></h3>
                     <h4 class="box__text box__text--bottom"><span class="box__text-inner">Solo Singing</span></h4>
 
@@ -174,15 +174,15 @@
             <a class="grid__item" href="#preview-9">
                 <div class="box">
                     <div class="box__shadow"></div>
-                    <img class="box__img" src="images/1.jpg" alt="Some image"/>
-                    <h3 class="box__title"><span class="box__title-inner" data-hover="Esports">Esports</span></h3>
-                    <h4 class="box__text box__text--bottom"><span class="box__text-inner">Gaming</span></h4>
+                    <img class="box__img" src="images/9.jpg" alt="Some image"/>
+                    <h3 class="box__title"><span class="box__title-inner" data-hover="Idols">Idols</span></h3>
+                    <h4 class="box__text box__text--bottom"><span class="box__text-inner">Mr. & Ms. Emblazon</span></h4>
                 </div>
             </a>
             <a class="grid__item" href="#preview-10">
                 <div class="box">
                     <div class="box__shadow"></div>
-                    <img class="box__img" src="images/1.jpg" alt="Some image"/>
+                    <img class="box__img" src="images/10.jpg" alt="Some image"/>
                     <h3 class="box__title box__title--bottom"><span class="box__title-inner" data-hover="Poems">Poems</span></h3>
                     <h4 class="box__text"><span class="box__text-inner box__text-inner--rotated2">Poetry Recitation</span></h4>
                     <p class="box__content">"Call it art or call it freedom."</p>
@@ -191,13 +191,97 @@
             <a class="grid__item" href="#preview-11">
                 <div class="box">
                     <div class="box__shadow"></div>
-                    <img class="box__img" src="images/1.jpg" alt="Some image"/>
+                    <img class="box__img" src="images/11.jpg" alt="Some image"/>
                     <h3 class="box__title box__title--straight box__title--left"><span class="box__title-inner" data-hover="Rap">Rap</span></h3>
                     <h4 class="box__text box__text--bottom box__text--right"><span class="box__text-inner box__text-inner--rotated3">Rapping</span></h4>
                     <div class="box__deco box__deco--top">&#10153;</div>
                 </div>
             </a>
+            <a class="grid__item" href="#preview-12">
+                <div class="box">
+                    <div class="box__shadow"></div>
+                    <img class="box__img" src="images/12.jpg" alt="Some image"/>
+                    <h3 class="box__title box__title--straight box__title--left"><span class="box__title-inner" data-hover="Dance">Dance</span></h3>
+                    <h4 class="box__text box__text--bottom box__text--right"><span class="box__text-inner box__text-inner--rotated3">Solo Dance</span></h4>
+                </div>
+            </a>
+            <a class="grid__item" href="#preview-13">
+                <div class="box">
+                    <div class="box__shadow"></div>
+                    <img class="box__img" src="images/13.jpg" alt="Some image"/>
+                    <h3 class="box__title box__title--straight box__title--left"><span class="box__title-inner" data-hover="Quiz">Quiz</span></h3>
+                    <h4 class="box__text box__text--bottom box__text--right"><span class="box__text-inner box__text-inner--rotated3">Entertainment Quiz</span></h4>
+                    <div class="box__deco box__deco--top">&#10153;</div>
+                </div>
+            </a>
+            <a class="grid__item" href="#preview-14">
+                <div class="box">
+                    <div class="box__shadow"></div>
+                    <img class="box__img" src="images/14.jpg" alt="Some image"/>
+                    <h3 class="box__title box__title--straight box__title--left"><span class="box__title-inner" data-hover="Drama">Drama</span></h3>
+                    <h4 class="box__text box__text--bottom box__text--right"><span class="box__text-inner box__text-inner--rotated3">Street Play</span></h4>
+                    <div class="box__deco box__deco--top">&#10153;</div>
+                </div>
+            </a>
+            <a class="grid__item" href="#preview-15">
+                <div class="box">
+                    <div class="box__shadow"></div>
+                    <img class="box__img" src="images/15.jpg" alt="Some image"/>
+                    <h3 class="box__title box__title--straight box__title--left"><span class="box__title-inner" data-hover="Drama">Drama</span></h3>
+                    <h4 class="box__text box__text--bottom box__text--right"><span class="box__text-inner box__text-inner--rotated3">One Act Play</span></h4>
+                    <div class="box__deco box__deco--top">&#10153;</div>
+                </div>
+            </a>
+            <a class="grid__item" href="#preview-16">
+                <div class="box">
+                    <div class="box__shadow"></div>
+                    <img class="box__img" src="images/16.jpg" alt="Some image"/>
+                    <h3 class="box__title"><span class="box__title-inner" data-hover="Fun">Fun</span></h3>
+                    <h4 class="box__text box__text--bottom"><span class="box__text-inner">Musical Chairs</span></h4>
+                </div>
+            </a>
+            <a class="grid__item" href="#preview-17">
+                <div class="box">
+                    <div class="box__shadow"></div>
+                    <img class="box__img" src="images/17.jpg" alt="Some image"/>
+                    <h3 class="box__title"><span class="box__title-inner" data-hover="Drama">Drama</span></h3>
+                    <h4 class="box__text box__text--bottom"><span class="box__text-inner">AD-MAD Show</span></h4>
+                </div>
+            </a>
+            <a class="grid__item" href="#preview-18">
+                <div class="box">
+                    <div class="box__shadow"></div>
+                    <img class="box__img" src="images/18.jpg" alt="Some image"/>
+                    <h3 class="box__title"><span class="box__title-inner" data-hover="60sec">60sec</span></h3>
+                    <h4 class="box__text box__text--bottom"><span class="box__text-inner">Minute to Win it</span></h4>
+                </div>
+            </a>
+            <a class="grid__item" href="#preview-19">
+                <div class="box">
+                    <div class="box__shadow"></div>
+                    <img class="box__img" src="images/19.jpg" alt="Some image"/>
+                    <h3 class="box__title"><span class="box__title-inner" data-hover="Selfie">Selfie</span></h3>
+                    <h4 class="box__text box__text--bottom"><span class="box__text-inner">Selfie Contest</span></h4>
+                </div>
+            </a>
+            <a class="grid__item" href="#preview-20">
+                <div class="box">
+                    <div class="box__shadow"></div>
+                    <img class="box__img" src="images/20.jpg" alt="Some image"/>
+                    <h3 class="box__title"><span class="box__title-inner" data-hover="Art">Art</span></h3>
+                    <h4 class="box__text box__text--bottom"><span class="box__text-inner">Tattoo Making</span></h4>
+                </div>
+            </a>
+            <a class="grid__item" href="#preview-21">
+                <div class="box">
+                    <div class="box__shadow"></div>
+                    <img class="box__img" src="images/21.jpg" alt="Some image"/>
+                    <h3 class="box__title"><span class="box__title-inner" data-hover="Luck">Luck</span></h3>
+                    <h4 class="box__text box__text--bottom"><span class="box__text-inner">Tambola</span></h4>
+                </div>
+            </a>
         </div>
+
     </div>
     <div class="overlay">
         <div class="overlay__reveal"></div>
