--- a/sponsors.html
+++ b/sponsors.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Emblazon 2019||The Cultural Fest of HMRITM</title>
     <link rel="shortcut icon" href="images/mask_logo.png">
-    
-     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css" >
+
+     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" >
      <!-- Animate -->
     <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
      <link rel="stylesheet" type="text/css" href="css/normalize.css" />
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="css/base.css" />
     <link href="css/index.css" rel="stylesheet">
     <script src="js/snap.svg-min.js"></script>
-    <link rel="stylesheet" href="sponsors.css">
+    <link rel="stylesheet" href="css/sponsors.css">
      <script>document.documentElement.className="js";var supportsCssVars=function(){var e,t=document.createElement("style");return t.innerHTML="root: { --tmp-var: bold; }",document.head.appendChild(t),e=!!(window.CSS&&window.CSS.supports&&window.CSS.supports("font-weight","var(--tmp-var)")),t.parentNode.removeChild(t),e};supportsCssVars()||alert("Please view this Site in a modern browser for best experience.");</script>
 
 
@@ -32,16 +32,16 @@
 </svg>
 
 <div class="background"></div>
-<nav class="menu">
+<nav class="menu smenu">
     <div class="menu__item menu__item--1" data-direction="bt">
         <div class="menu__item-inner">
-            <div class="mainmenu">
+            <div class="mainmenu ">
                 <a href="index.html" class="mainmenu__item">Emblazon 2019</a>
                 <a href="about.html" class="mainmenu__item">About Us</a>
                 <a href="events.html" class="mainmenu__item">Events</a>
                 <a href="team.html" class="mainmenu__item">Our Team</a>
                 <a href="sponsors.html" class="mainmenu__item">Sponsors</a>
-                <a href="register.html"class="mainmenu__item">Register</a>
+                <a href="register.html" class="mainmenu__item">Register</a>
             </div>
             <p class="label label--topleft label--vert-mirror">HMRITM</p>
             <p class="label label--bottomright label--vert">The Important Stuff</p>
