--- a/events.html
+++ b/events.html
@@ -77,8 +77,8 @@
         <div class="menu__item-inner">
 
             <p class="label label--topleft label--line">Be a Part now</p>
-            <a href="schedule.html" class="menu__item-link">Schedule</a>
-            <a href="gallery.html" class="menu__item-link">Gallery</a>
+            <a href="schedule.html" class="menu__item-link">Day 1 Schedule</a>
+            <a href="schedule2.html" class="menu__item-link">Day 2 Schedule</a>
         </div>
 
 
@@ -384,6 +384,96 @@
                 <h3 class="box__title box__title--straight box__title--left"><span class="box__title-inner" data-hover="Rap">Rap</span></h3>
                 <h4 class="box__text box__text--bottom box__text--right"><span class="box__text-inner box__text-inner--rotated3">Rapping</span></h4>
                 <div class="box__deco box__deco--top">&#10153;</div>
+            </div>
+            <p class="overlay__content">Details</p>
+        </div>
+        <div class="overlay__item" id="preview-12">
+            <div class="box">
+                <div class="box__shadow"></div>
+                <img class="box__img box__img--original" src="images/original/1.jpg" alt="Some image"/>
+                <h3 class="box__title box__title--bottom"><span class="box__title-inner" data-hover="Poems">Poems</span></h3>
+                <h4 class="box__text"><span class="box__text-inner box__text-inner--rotated2">Poetry Recitation</span></h4>
+            </div>
+            <p class="overlay__content">Details</p>
+        </div>
+        <div class="overlay__item" id="preview-13">
+            <div class="box">
+                <div class="box__shadow"></div>
+                <img class="box__img box__img--original" src="images/original/1.jpg" alt="Some image"/>
+                <h3 class="box__title box__title--bottom"><span class="box__title-inner" data-hover="Poems">Poems</span></h3>
+                <h4 class="box__text"><span class="box__text-inner box__text-inner--rotated2">Poetry Recitation</span></h4>
+            </div>
+            <p class="overlay__content">Details</p>
+        </div>
+        <div class="overlay__item" id="preview-14">
+            <div class="box">
+                <div class="box__shadow"></div>
+                <img class="box__img box__img--original" src="images/original/1.jpg" alt="Some image"/>
+                <h3 class="box__title box__title--bottom"><span class="box__title-inner" data-hover="Poems">Poems</span></h3>
+                <h4 class="box__text"><span class="box__text-inner box__text-inner--rotated2">Poetry Recitation</span></h4>
+            </div>
+            <p class="overlay__content">Details</p>
+        </div>
+        <div class="overlay__item" id="preview-15">
+            <div class="box">
+                <div class="box__shadow"></div>
+                <img class="box__img box__img--original" src="images/original/1.jpg" alt="Some image"/>
+                <h3 class="box__title box__title--bottom"><span class="box__title-inner" data-hover="Poems">Poems</span></h3>
+                <h4 class="box__text"><span class="box__text-inner box__text-inner--rotated2">Poetry Recitation</span></h4>
+            </div>
+            <p class="overlay__content">Details</p>
+        </div>
+        <div class="overlay__item" id="preview-16">
+            <div class="box">
+                <div class="box__shadow"></div>
+                <img class="box__img box__img--original" src="images/original/1.jpg" alt="Some image"/>
+                <h3 class="box__title box__title--bottom"><span class="box__title-inner" data-hover="Poems">Poems</span></h3>
+                <h4 class="box__text"><span class="box__text-inner box__text-inner--rotated2">Poetry Recitation</span></h4>
+            </div>
+            <p class="overlay__content">Details</p>
+        </div>
+        <div class="overlay__item" id="preview-17">
+            <div class="box">
+                <div class="box__shadow"></div>
+                <img class="box__img box__img--original" src="images/original/1.jpg" alt="Some image"/>
+                <h3 class="box__title box__title--bottom"><span class="box__title-inner" data-hover="Poems">Poems</span></h3>
+                <h4 class="box__text"><span class="box__text-inner box__text-inner--rotated2">Poetry Recitation</span></h4>
+            </div>
+            <p class="overlay__content">Details</p>
+        </div>
+        <div class="overlay__item" id="preview-18">
+            <div class="box">
+                <div class="box__shadow"></div>
+                <img class="box__img box__img--original" src="images/original/1.jpg" alt="Some image"/>
+                <h3 class="box__title box__title--bottom"><span class="box__title-inner" data-hover="Poems">Poems</span></h3>
+                <h4 class="box__text"><span class="box__text-inner box__text-inner--rotated2">Poetry Recitation</span></h4>
+            </div>
+            <p class="overlay__content">Details</p>
+        </div>
+        <div class="overlay__item" id="preview-19">
+            <div class="box">
+                <div class="box__shadow"></div>
+                <img class="box__img box__img--original" src="images/original/1.jpg" alt="Some image"/>
+                <h3 class="box__title box__title--bottom"><span class="box__title-inner" data-hover="Poems">Poems</span></h3>
+                <h4 class="box__text"><span class="box__text-inner box__text-inner--rotated2">Poetry Recitation</span></h4>
+            </div>
+            <p class="overlay__content">Details</p>
+        </div>
+        <div class="overlay__item" id="preview-20">
+            <div class="box">
+                <div class="box__shadow"></div>
+                <img class="box__img box__img--original" src="images/original/1.jpg" alt="Some image"/>
+                <h3 class="box__title box__title--bottom"><span class="box__title-inner" data-hover="Poems">Poems</span></h3>
+                <h4 class="box__text"><span class="box__text-inner box__text-inner--rotated2">Poetry Recitation</span></h4>
+            </div>
+            <p class="overlay__content">Details</p>
+        </div>
+        <div class="overlay__item" id="preview-21">
+            <div class="box">
+                <div class="box__shadow"></div>
+                <img class="box__img box__img--original" src="images/original/1.jpg" alt="Some image"/>
+                <h3 class="box__title box__title--bottom"><span class="box__title-inner" data-hover="Poems">Poems</span></h3>
+                <h4 class="box__text"><span class="box__text-inner box__text-inner--rotated2">Poetry Recitation</span></h4>
             </div>
             <p class="overlay__content">Details</p>
         </div>
