--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
         <div class="menu__item-inner">
 
             <p class="label label--topleft label--line">Be a Part now</p>
-            <a href="schedule.html" class="menu__item-link">Schedule</a>
-            <a href="gallery.html" class="menu__item-link">Gallery</a>
+            <a href="schedule.html" class="menu__item-link">Day 1 Schedule</a>
+            <a href="schedule2.html" class="menu__item-link">Day 2 Schedule</a>
         </div>
 
 
