--- a/sponsors.html
+++ b/sponsors.html
@@ -68,8 +68,8 @@
         <div class="menu__item-inner">
 
             <p class="label label--topleft label--line">Be a Part now</p>
-            <a href="schedule.html" class="menu__item-link">Schedule</a>
-            <a href="gallery.html" class="menu__item-link">Gallery</a>
+            <a href="schedule.html" class="menu__item-link">Day 1 Schedule</a>
+            <a href="schedule2.html" class="menu__item-link">Day 2 Schedule</a>
         </div>
 
 
@@ -117,7 +117,7 @@
             </div>
           </div>
           <div class="col-12 text-center">
-            <a href="#" class="btn btn-default btn-primary btn-group-lg">Become a sponsor</a>
+            <a href="http://hmritm.ac.in/pdf/Inviting%20Sponsorship%20for%20EMBLAZON%202019.pdf" target="_blank" class="btn btn-default btn-primary btn-group-lg">Become a sponsor</a>
           </div>
         </div>
       </div>
